--- a/package.json
+++ b/package.json
@@ -49,16 +49,19 @@
     "date-fns": "^2.29.3",
     "docx": "^9.5.1",
     "embla-carousel-react": "8.5.1",
+    "file-saver": "^2.0.5",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "openai": "^5.8.3",
     "pdfkit": "^0.17.1",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "latest",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
@@ -68,6 +71,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
