--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "latest",
+    "@types/pdfkit": "^0.17.2",
     "ai": "^4.3.17",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -50,11 +51,15 @@
     "docx": "^9.5.1",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "openai": "^5.8.3",
+    "nodemailer": "^7.0.5",
+    "openai": "^3.2.1",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.1",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
@@ -72,7 +77,9 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
