--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "openai": "^3.2.1",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.1",
+    "pizzip": "^3.2.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
