--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "latest",
     "@types/pdfkit": "^0.17.2",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
     "ai": "^4.3.17",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
