--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "file-saver": "^2.0.5",
     "html-docx-js": "^0.3.1",
     "input-otp": "1.4.1",
+    "jsonrepair": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
