--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "docx": "^8.5.0",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.12",
     "html-docx-js": "^0.3.1",
     "input-otp": "1.4.1",
     "jsonrepair": "^3.13.0",
